--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
   scroll-behavior: smooth;
   font-family: "Rubik", sans-serif;
   font-weight: 300;
+  font-size: 14px;
   background-image: url(../img/Frame\ 1261155500.png);
   background-position: center center;
   background-size: cover;
