--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
   font-family: "Rubik", sans-serif;
   font-weight: 300;
   font-size: 14px;
-  background-image: url(../img/Frame\ 1261155500.png);
+  background-image: url(../img/bg.png);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
