--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 body {
   scroll-behavior: smooth;
   font-family: "Rubik", sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 14px;
   background-image: url(../img/bg.png);
   background-position: center center;
@@ -33,6 +33,7 @@ body {
 .navbar {
   background-color: transparent !important;
   transition: background-color 0.3s ease;
+  font-weight: 500 !important;
 }
 
 /* Navbar Sólida ao Scroll */
